# qbt-cli

./: .gitignore  Cargo.toml  README.md  qbt-cli.json
.github/: FUNDING.yml
.github/workflows/: build-and-test.yml  build-release.yml  upload-artifacts.yml
crates/qbittorrent-rs/: Cargo.toml  README.md
crates/qbittorrent-rs/src/: lib.rs
src/: cli.rs  config.rs  main.rs  myserde.rs
src/cli/: add.rs  cli.rs  delete.rs  list.rs  mod.rs
