[package]
name = "aqu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json", "cookies", "rustls-tls"] }
config = "0.13.1"
directories = "4.0"
serde = { version = "1.0", features = ["derive"] }
url = "2.3.1"
