[package]
name = "qbt"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "crates/qbittorrent-rs"
]

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "cookies", "rustls-tls"] }
config = "0.13.1"
directories = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.3.1"
log = "0.4.0"
simple_logger = "4.0.0"
qbittorrent-rs = { path = "crates/qbittorrent-rs", version = "0.1.3" }