[package]
name = "qbittorrent-rs"
version = "0.1.3"
edition = "2021"
description = "Qbittorrent API SDK for Rust"
repository = "https://github.com/Bpazy/qbt-cli/crates/qbittorrent-rs"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "cookies", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.3.1"
log = "0.4.0"
